<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="recipeId"
            type="int"/>

        <variable
            name="recipe"
            type="com.sergei.apprecipes.network.SpoonacularRecipeResponse" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".searchlocal.RecipeDetailFragment">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintHeight_max="240dp"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbar"
                app:recipeImageUrl="@{recipe.imageUrl}"
                tools:src="@tools:sample/avatars"
                android:contentDescription="@string/recipe_image" />

            <TextView
                android:id="@+id/recipe_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:text=""
                recipeTitle="@{recipe.title}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageView"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"

                tools:text="Recipe Name" />

            <com.google.android.material.chip.Chip
                android:id="@+id/filter_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/recipe_name"
                app:layout_constraintTop_toBottomOf="@+id/recipe_name"
                recipeOnlineCategory="@{recipe}"
                android:text="@string/no_category"
                />

            <TextView
                android:id="@+id/ingredients_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/ingredients_label"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/recipe_name"
                app:layout_constraintTop_toBottomOf="@+id/filter_chip" />

            <TextView
                android:id="@+id/ingredients_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:maxWidth="360dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                recipeOnlineIngredients="@{recipe}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/ingredients_label"
                app:layout_constraintTop_toBottomOf="@+id/ingredients_label"
                tools:text="Item 1\nItem 2\nItem 3\nItem 4\n" />

            <TextView
                android:id="@+id/instructions_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instructions_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/ingredients_text"
                app:layout_constraintTop_toBottomOf="@+id/ingredients_text" />

            <TextView
                android:id="@+id/instructions_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                recipeOnlineInstructions="@{recipe}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/instructions_label"
                app:layout_constraintTop_toBottomOf="@+id/instructions_label"
                tools:text="I found this pancake recipe in my Grandma's recipe book. Judging from the weathered look of this recipe card, this was a family favorite." />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>

